--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">设置选项</string>
     <string name="action_change_style">更换背景</string>
+    <string name="home_page">首页</string>
 </resources>
